--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
       - master
   pull_request:
 
+permissions:
+  contents: read
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -38,6 +41,59 @@ jobs:
 
       - name: Build API Gateway image
         run: docker build -t api-gateway ./api-gateway
+
+  docker-scout:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+    strategy:
+      matrix:
+        include:
+          - service: auth
+            context: ./auth
+            image: auth-service
+          - service: product
+            context: ./product
+            image: product-service
+          - service: order
+            context: ./order
+            image: order-service
+          - service: api-gateway
+            context: ./api-gateway
+            image: api-gateway
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_NAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build ${{ matrix.service }} image
+        run: docker build -t ${{ matrix.image }}:scout ${{ matrix.context }}
+
+      - name: Analyze ${{ matrix.service }} image with Docker Scout
+        uses: docker/scout-action@v1
+        with:
+          command: cves
+          image: ${{ matrix.image }}:scout
+          sarif-file: ${{ matrix.image }}-docker-scout.sarif
+          exit-code: false
+          accept-license: true
+
+      - name: Upload Docker Scout results
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ${{ matrix.image }}-docker-scout.sarif
+
 
   push-docker-images:
     needs: build-and-test
@@ -72,16 +128,17 @@ jobs:
             IMAGE_SHA="$REGISTRY/$service:${GIT_SHA::7}"
             IMAGE_LATEST="$REGISTRY/$service:latest"
 
+            echo "Building and pushing $service..."
             docker build -t "$IMAGE_SHA" -t "$IMAGE_LATEST" "./$service"
             docker push "$IMAGE_SHA"
             docker push "$IMAGE_LATEST"
           done
-      - name: Debug secrets
+
+      - name: Confirm secrets status
         run: |
           if [ -z "${{ secrets.DOCKER_NAME }}" ] || [ -z "${{ secrets.DOCKER_TOKEN }}" ]; then
             echo "Missing Docker secrets"
             exit 1
           else
-            echo "Docker secrets found"
+            echo "Docker secrets found and used successfully"
           fi
-
